--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
   <font size=+1> 2020-07-01 00:11 | 29 ℃ | 94 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-01 00:26 | 29 ℃ | 94 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-01 00:41 | 29 ℃ | 94 ％|指数  31  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
