--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <font size=+1> 2020-07-01 00:56 | 29 ℃ | 94 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-01 01:11 | 28 ℃ | 94 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-01 01:26 | 28 ℃ | 94 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-07-01 01:41 | 28 ℃ | 94 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
