--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-06 23:24 | 29 ℃ | 89 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-06 23:39 | 29 ℃ | 89 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-06 23:54 | 29 ℃ | 89 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-07 00:09 | 29 ℃ | 89 ％|指数  31  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-07 01:39 | 28 ℃ | 90 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-07 01:54 | 28 ℃ | 90 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-07 02:09 | 28 ℃ | 91 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-07-07 02:24 | 28 ℃ | 91 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
