--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-10 21:43 | 30 ℃ | 86 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-10 21:58 | 30 ℃ | 86 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-10 22:13 | 30 ℃ | 86 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-10 22:28 | 30 ℃ | 86 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-10 23:58 | 29 ℃ | 87 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-11 00:13 | 29 ℃ | 87 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-11 00:28 | 29 ℃ | 88 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-11 00:43 | 29 ℃ | 87 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
