--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-13 19:02 | 33 ℃ | 82 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-13 19:17 | 33 ℃ | 81 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-13 19:32 | 32 ℃ | 81 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-13 19:47 | 32 ℃ | 80 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-13 21:17 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-13 21:32 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-13 21:47 | 30 ℃ | 81 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-13 22:02 | 30 ℃ | 81 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
