--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-14 07:17 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-14 07:32 | 29 ℃ | 93 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 07:47 | 30 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 08:02 | 31 ℃ | 95 ％|指数  34  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-14 09:32 | 33 ℃ | 91 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 09:47 | 33 ℃ | 91 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 10:02 | 33 ℃ | 90 ％|指数  35  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-14 10:17 | 33 ℃ | 90 ％|指数  35  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
