--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-14 20:17 | 30 ℃ | 90 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 20:32 | 30 ℃ | 90 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 20:47 | 30 ℃ | 90 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 21:02 | 30 ℃ | 91 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-14 22:32 | 29 ℃ | 91 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 22:47 | 29 ℃ | 91 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-14 23:02 | 29 ℃ | 90 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-07-14 23:17 | 29 ℃ | 90 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
