--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-15 04:47 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-15 05:02 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-15 05:17 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-15 05:32 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-15 07:02 | 27 ℃ | 91 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-15 07:17 | 28 ℃ | 91 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-15 07:32 | 28 ℃ | 92 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-07-15 07:47 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
