--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-15 09:02 | 32 ℃ | 95 ％|指数  35  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-15 09:17 | 33 ℃ | 94 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-15 09:32 | 33 ℃ | 93 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-15 09:47 | 34 ℃ | 94 ％|指数  36  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-15 11:17 | 34 ℃ | 89 ％|指数  36  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-15 11:32 | 34 ℃ | 91 ％|指数  37  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-20 20:16 | 29 ℃ | 87 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-20 20:31 | 28 ℃ | 92 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
