--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-20 21:46 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-20 22:01 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-20 22:16 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-20 22:31 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-21 00:01 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-21 00:16 | 29 ℃ | 93 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-21 00:31 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-21 00:46 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
