--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-07-23 06:41 | 26 ℃ | 95 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-23 06:56 | 26 ℃ | 95 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-23 07:11 | 27 ℃ | 95 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-07-23 07:26 | 27 ℃ | 95 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-07-23 08:56 | 31 ℃ | 95 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-23 09:11 | 31 ℃ | 95 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-07-23 09:26 | 32 ℃ | 95 ％|指数  34  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-07-23 09:41 | 32 ℃ | 95 ％|指数  35  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
